2004-07-20  Wim Taymans  <wim@fluendo.com>

	* gst/tcp/gstmultifdsink.c: (gst_multifdsink_class_init),
	(gst_multifdsink_init), (gst_multifdsink_add),
	(gst_multifdsink_client_remove),
	(gst_multifdsink_handle_client_write),
	(gst_multifdsink_queue_buffer), (gst_multifdsink_chain),
	(gst_multifdsink_set_property), (gst_multifdsink_get_property),
	(gst_multifdsink_init_send):
	* gst/tcp/gstmultifdsink.h:
	Added more stats, added timeout for a client, fixed some typos
	and added some comments.

2004-07-20  Wim Taymans  <wim@fluendo.com>

	* gst/tcp/gstmultifdsink.c: (gst_multifdsink_class_init),
	(gst_multifdsink_add), (gst_multifdsink_get_stats),
	(gst_multifdsink_client_remove),
	(gst_multifdsink_handle_client_write):
	* gst/tcp/gstmultifdsink.h:
	* gst/tcp/gsttcp-marshal.list:
	Added get_stats method that returns a GValueArray of
	stats values.

2004-07-19  Benjamin Otte  <otte@gnome.org>

	* ext/ladspa/gstladspa.c: (gst_ladspa_base_init):
	  make sure longname, description and author are valid UTF-8

2004-07-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* sys/ximage/ximagesink.c: (gst_ximagesink_change_state),
	(gst_ximagesink_set_property):
	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_change_state),
	(gst_xvimagesink_set_property):
	  make sure SYNCHRONOUS is respected after getting the X context

2004-07-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/matroska/matroska-demux.c:
	(gst_matroska_demux_handle_src_event),
	(gst_matroska_demux_parse_blockgroup):
	* gst/matroska/matroska-ids.h:
	  add BlockReference tag and ignore it to clear out log.
	  ignore NAVIGATION events to clear out log.

2004-07-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/matroska/matroska-demux.c: (gst_matroska_demux_class_init),
	(gst_matroska_demux_add_stream):
	* gst/matroska/matroska-mux.c: (gst_matroska_mux_class_init):
	  add debug categories

2004-07-16  Wim Taymans  <wim@fluendo.com>

	* ext/libpng/Makefile.am: