@@ -1,2 +1,3 @@
 VOID:STRING,UINT
+VOID:INT
 BOXED:INT
