@@ -1,6 +1,15 @@
 2004-07-20  Wim Taymans  <wim@fluendo.com>
 
 	* gst/tcp/gstmultifdsink.c: (gst_multifdsink_class_init),
+	(gst_multifdsink_add), (gst_multifdsink_client_remove),
+	(gst_multifdsink_handle_client_write),
+	(gst_multifdsink_queue_buffer):
+	* gst/tcp/gsttcp-marshal.list:
+	Fixed the stupid marshal definition.
+
+2004-07-20  Wim Taymans  <wim@fluendo.com>
+
+	* gst/tcp/gstmultifdsink.c: (gst_multifdsink_class_init),
 	(gst_multifdsink_init), (gst_multifdsink_add),
 	(gst_multifdsink_client_remove),
 	(gst_multifdsink_handle_client_write),
